@@ -203,7 +203,7 @@ public final class FormulaParser {
         final int sheetIndex = -1; //don't care?
         Ptg[] arr = FormulaParser.parse(tableText, workbook, FormulaType.CELL, sheetIndex, rowIndex);
         if (arr.length != 1 || !(arr[0] instanceof Area3DPxg) ) {
-            throw new IllegalStateException("Illegal structured reference");
+            throw new IllegalStateException("Illegal structured reference, had length: " + arr.length);
         }
         return (Area3DPxg) arr[0];
     }
@@ -211,7 +211,7 @@ public final class FormulaParser {
     /** Read New Character From Input Stream */
     private void GetChar() {
         // The intersection operator is a space.  We track whether the run of 
-        // whitespace preceeding "look" counts as an intersection operator.  
+        // whitespace preceding "look" counts as an intersection operator.
         if (IsWhite(look)) {
             if (look == ' ') {
                 _inIntersection = true;
@@ -223,7 +223,8 @@ public final class FormulaParser {
         
         // Check to see if we've walked off the end of the string.
         if (_pointer > _formulaLength) {
-            throw new RuntimeException("too far");
+            throw new RuntimeException("Parsed past the end of the formula, pos: " + _pointer +
+                    ", length: " + _formulaLength + ", formula: " + _formulaString);
         }
         if (_pointer < _formulaLength) {
             look=_formulaString.codePointAt(_pointer);
@@ -234,7 +235,6 @@ public final class FormulaParser {
             _inIntersection = false;
         }
         _pointer += Character.charCount(look);
-        //System.out.println(new StringBuilder("Got char: ").appendCodePoint(look)).toString();
     }
     private void resetPointer(int ptr) {
         _pointer = ptr;
@@ -381,9 +381,6 @@ public final class FormulaParser {
         }
         if (token instanceof OperandPtg) {
             return false;
-        }
-        if (token instanceof OperationPtg) {
-            return true;
         }
 
         return false;
@@ -654,18 +651,24 @@ public final class FormulaParser {
                 resetPointer(savePtr1);
                 break;
             }
-            if (specName.equals(specAll)) {
-                isAllSpec = true;
-            } else if (specName.equals(specData)) {
-                isDataSpec = true;
-            } else if (specName.equals(specHeaders)) {
-                isHeadersSpec = true;
-            } else if (specName.equals(specThisRow)) {
-                isThisRowSpec = true;
-            } else if (specName.equals(specTotals)) {
-                isTotalsSpec  = true;
-            } else {
-                throw new FormulaParseException("Unknown special quantifier "+ specName);
+            switch (specName) {
+                case specAll:
+                    isAllSpec = true;
+                    break;
+                case specData:
+                    isDataSpec = true;
+                    break;
+                case specHeaders:
+                    isHeadersSpec = true;
+                    break;
+                case specThisRow:
+                    isThisRowSpec = true;
+                    break;
+                case specTotals:
+                    isTotalsSpec = true;
+                    break;
+                default:
+                    throw new FormulaParseException("Unknown special quantifier " + specName);
             }
             nSpecQuantifiers++;
             if (look == ','){
@@ -691,13 +694,13 @@ public final class FormulaParser {
         } else {
             nColQuantifiers++;
             if (look == ','){
-                throw new FormulaParseException("The formula "+ _formulaString + "is illegal: you should not use ',' with column quantifiers");
+                throw new FormulaParseException("The formula "+ _formulaString + " is illegal: you should not use ',' with column quantifiers");
             } else if (look == ':') {
                 GetChar();
                 endColumnName = parseAsColumnQuantifier();
                 nColQuantifiers++;
                 if (endColumnName == null) {
-                    throw new FormulaParseException("The formula "+ _formulaString + "is illegal: the string after ':' must be column quantifier");
+                    throw new FormulaParseException("The formula "+ _formulaString + " is illegal: the string after ':' must be column quantifier");
                 }
             }
         }
@@ -712,18 +715,24 @@ public final class FormulaParser {
                 resetPointer(savePtr0);
                 String name = parseAsSpecialQuantifier();
                 if (name!=null) {
-                    if (name.equals(specAll)) {
-                        isAllSpec = true;
-                    } else if (name.equals(specData)) {
-                        isDataSpec = true;
-                    } else if (name.equals(specHeaders)) {
-                        isHeadersSpec = true;
-                    } else if (name.equals(specThisRow)) {
-                        isThisRowSpec = true;
-                    } else if (name.equals(specTotals)) {
-                        isTotalsSpec  = true;
-                    } else {
-                        throw new FormulaParseException("Unknown special quantifier "+ name);
+                    switch (name) {
+                        case specAll:
+                            isAllSpec = true;
+                            break;
+                        case specData:
+                            isDataSpec = true;
+                            break;
+                        case specHeaders:
+                            isHeadersSpec = true;
+                            break;
+                        case specThisRow:
+                            isThisRowSpec = true;
+                            break;
+                        case specTotals:
+                            isTotalsSpec = true;
+                            break;
+                        default:
+                            throw new FormulaParseException("Unknown special quantifier " + name);
                     }
                     nSpecQuantifiers++;
                 } else {
@@ -930,7 +939,7 @@ public final class FormulaParser {
             GetChar();
         }
         SkipWhite();
-        
+
         return sb.toString();
     }
 
@@ -1348,7 +1357,6 @@ public final class FormulaParser {
     
     /**
      * Adds a name (named range or user defined function) to underlying workbook's names table
-     * @param functionName
      */
     private void addName(String functionName) {
         final Name name = _book.createName();
@@ -1448,7 +1456,7 @@ public final class FormulaParser {
     /** get arguments to a function */
     private ParseNode[] Arguments() {
         //average 2 args per function
-        List<ParseNode> temp = new ArrayList<ParseNode>(2);
+        List<ParseNode> temp = new ArrayList<>(2);
         SkipWhite();
         if(look == ')') {
             return ParseNode.EMPTY_ARRAY;
@@ -1468,7 +1476,7 @@ public final class FormulaParser {
                 missedPrevArg = true;
                 continue;
             }
-            temp.add(comparisonExpression());
+            temp.add(intersectionExpression());
             missedPrevArg = false;
             SkipWhite();
             if (!isArgumentDelimiter(look)) {
@@ -1576,7 +1584,7 @@ public final class FormulaParser {
     }
 
     private ParseNode parseArray() {
-        List<Object[]> rowsData = new ArrayList<Object[]>();
+        List<Object[]> rowsData = new ArrayList<>();
         while(true) {
             Object[] singleRowData = parseArrayRow();
             rowsData.add(singleRowData);
@@ -1607,7 +1615,7 @@ public final class FormulaParser {
     }
 
     private Object[] parseArrayRow() {
-        List<Object> temp = new ArrayList<Object>();
+        List<Object> temp = new ArrayList<>();
         while (true) {
             temp.add(parseArrayItem());
             SkipWhite();
@@ -1670,7 +1678,7 @@ public final class FormulaParser {
         if (!isPositive) {
             value = -value;
         }
-        return new Double(value);
+        return Double.valueOf(value);
     }
 
     private Ptg parseNumber() {
@@ -1711,10 +1719,11 @@ public final class FormulaParser {
 
     private int parseErrorLiteral() {
         Match('#');
-        String part1 = parseUnquotedIdentifier().toUpperCase(Locale.ROOT);
+        String part1 = parseUnquotedIdentifier();
         if (part1 == null) {
             throw expected("remainder of error constant literal");
         }
+        part1 = part1.toUpperCase(Locale.ROOT);
 
         switch(part1.charAt(0)) {
             case 'V': {
@@ -1881,13 +1890,12 @@ public final class FormulaParser {
         boolean hasUnions = false;
         while (true) {
             SkipWhite();
-            switch(look) {
-                case ',':
-                    GetChar();
-                    hasUnions = true;
-                    ParseNode other = intersectionExpression();
-                    result = new ParseNode(UnionPtg.instance, result, other);
-                    continue;
+            if (look == ',') {
+                GetChar();
+                hasUnions = true;
+                ParseNode other = intersectionExpression();
+                result = new ParseNode(UnionPtg.instance, result, other);
+                continue;
             }
             if (hasUnions) {
                 return augmentWithMemPtg(result);
